# yt-video-downloader-system

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test-config.json  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  release.yml
cli/: __init__.py  interfaces.py  main_cli.py
config/: __init__.py  config_manager.py  error_handling.py  filesystem_validator.py  logging_config.py
core/: __init__.py  application.py
models/: __init__.py  core.py
services/: __init__.py  archive_manager.py  download_manager.py  interfaces.py  metadata_handler.py  quality_selector.py  subtitle_handler.py  timestamp_parser.py  video_splitter.py  workflow_manager.py
tests/: __init__.py  test_archive_manager.py  test_cli_interfaces.py  test_config_manager.py  test_download_manager.py  test_error_handling.py  test_filesystem_validator.py  test_integration_e2e.py  test_logging_config.py  test_metadata_handler.py  test_quality_selector.py  test_subtitle_handler.py  test_timestamp_parser.py  test_video_splitter.py  test_workflow_manager.py
