[project]
name = "yt-video-downloader-system"
version = "0.1.0"
description = ""
authors = [
    {name = "oladimeji balogun",email = "oladimejib.tech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "langchain (>=1.0.3,<2.0.0)",
    "fastapi (>=0.121.0,<0.122.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "yt-dlp (>=2025.10.22,<2026.0.0)",
    "click (>=8.3.0,<9.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "psutil (>=7.1.3,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
