[project]
name = "youtube-video-downloader"
version = "1.0.0"
description = "A production-ready YouTube video downloader with advanced features including timestamp-based video splitting, playlist support, and parallel downloads"
authors = [
    {name = "YouTube Downloader Team", email = "team@example.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["youtube", "downloader", "video", "playlist", "timestamp", "splitting", "parallel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP",
    "Environment :: Console",
    "Natural Language :: English",
]
dependencies = [
    "yt-dlp>=2023.12.30",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "colorama>=0.4.6",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
youtube-downloader = "cli.main_cli:main"

[project.urls]
Homepage = "https://github.com/example/youtube-video-downloader"
Repository = "https://github.com/example/youtube-video-downloader"
Documentation = "https://github.com/example/youtube-video-downloader#readme"
"Bug Tracker" = "https://github.com/example/youtube-video-downloader/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "config*", "core*", "models*", "services*"]
exclude = ["tests*", "*.tests*", "*.tests.*", "tests.*"]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["cli", "config", "core", "models", "services"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["cli", "config", "core", "models", "services"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
